feat: update UI and improve test workflow
- Replace logo with new Dgraph logo
- Add Ratel link to header navigation (opens in new tab)
- Rename "Tour" to "Tour Home" in nav
- Swap DQL/GraphQL tab order, make DQL default
- Use dgraph/standalone:latest instead of pinned version
- Reset database after tests complete

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   dgraph:
-    image: dgraph/standalone:v24.1.4
+    image: dgraph/standalone:latest
     container_name: tour-dgraph
     ports:
       - "8080:8080"
