--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://dgraph.io/tour/"
+baseURL = "http://localhost:1313/"
 languageCode = "en-us"
 title = "A Tour of Dgraph"
 theme="hugo-tutorials"
@@ -90,18 +90,10 @@ canonifyURLs = false
     dgraphHome = "https://dgraph.io"
     dgraphDocs = "https://docs.dgraph.io/"
     dgraphTour = "/"
-    dgraphBlog = "https://dgraph.io/blog/"
-    dgraphProduct = "https://dgraph.io/product"
-    dgraphSolutions = "https://dgraph.io/solutions"
-    dgraphPaper = "https://dgraph.io/paper"
-    dgraphCaseStudies = "https://dgraph.io/casestudies"
-    dgraphCommunity = "https://dgraph.io/community"
-    dgraphLegal = "https://dgraph.io/legal-notices/cloud-terms"
 
     # Dgraph services
-    dgraphPlay = "http://localhost:8001"
-    dgraphPlayGraphQL = "http://localhost:8001/graphql"
-    dgraphForum = "https://discuss.dgraph.io/"
+    dgraphPlay = "http://localhost:8000"
+    dgraphPlayGraphQL = "http://localhost:8000/graphql"
     dgraphGitHub = "https://github.com/dgraph-io/dgraph"
 
     # Social media
