--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
       - "9080:9080"
     volumes:
       - ./docker/dgraph:/dgraph
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   ratel:
     image: dgraph/ratel:latest
@@ -15,3 +21,19 @@ services:
       - "8000:8000"
     depends_on:
       - dgraph
+
+  tour:
+    build: .
+    container_name: tour-hugo
+    ports:
+      - "1313:1313"
+    volumes:
+      - ./content:/app/content:ro
+      - ./themes:/app/themes:ro
+      - ./config.toml:/app/config.toml:ro
+    environment:
+      - DGRAPH_ALPHA=http://tour-dgraph:8080
+      - HUGO_PORT=1313
+    depends_on:
+      dgraph:
+        condition: service_healthy
