feat: add tour-seed container for Windows/cross-platform seeding
- Add multi-stage Dockerfile with tour-hugo and tour-seed targets
- tour-seed includes dgraph CLI for running seed commands
- Add Alpine Linux (apk) support to deps-start and deps-dev
- Handle running as root in containers (no sudo needed)
- Make docker-up, docker-down, reset no-op when inside container
- seed-movie-dataset uses dgraph live directly when in container
- Add Windows instructions using docker exec in tour docs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,9 @@ services:
       - dgraph
 
   tour:
-    build: .
+    build:
+      context: .
+      target: tour-hugo
     container_name: tour-hugo
     ports:
       - "1313:1313"
@@ -34,6 +36,17 @@ services:
     environment:
       - DGRAPH_ALPHA=http://tour-dgraph:8080
       - HUGO_PORT=1313
+    depends_on:
+      dgraph:
+        condition: service_healthy
+
+  tour-seed:
+    build:
+      context: .
+      target: tour-seed
+    container_name: tour-seed
+    environment:
+      - DGRAPH_ALPHA=http://tour-dgraph:8080
     depends_on:
       dgraph:
         condition: service_healthy
