--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ releases.json
 published/node_modules/
 published/*/node_modules/
 
-docker/dgraph/
+docker/dgraph/*
+!docker/dgraph/.gitkeep
 .project
