docs: update intro section description on home page to match content

--- a/config.toml
+++ b/config.toml
@@ -110,7 +110,7 @@ canonifyURLs = false
     graphqlschema = "This module shows you how GraphQL schemas work inside Dgraph; and how to add, update, and delete data."
     graphqlmoredata = "Now that you have some experience with Dgraph and GraphQL, this module shows you how to work with some larger datasets."
     graphqlsearch = "In this module, you'll learn about Dgraph's search features with GraphQL."
-    intro = "In this module you'll learn how to set up and run Dgraph with Docker for the DQL portion of this tour, and also learn about graph databases."
+    intro = "Load the schema and sample data, learn what graphs and graph databases are, and see your first Dgraph query visualized in Ratel."
     basic = "Here you'll learn the basics of how to query graph data from Dgraph and how to use and interpret the results."
     schema = "This module shows you how schemas work inside Dgraph; and how to add, update, and delete data."
     moredata = "Now that you have some experience with Dgraph and DQL, this module shows you how to use the Live Loader tool to load large datasets.  You'll need this bigger dataset for the remaining sections of the tutorial."
